trabajos archivos css global

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -6,12 +6,25 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+
+
+<ion-content [fullscreen]="true">
+  <ion-slides>
+    <ion-slide>
+      <ion-img src="/assets/slidefotos/slide1.jpg"></ion-img>
+    </ion-slide>
+    <ion-slide>
+      <ion-img src="/assets/slidefotos/slide2.jpg"></ion-img>
+    </ion-slide>
+    <ion-slide>
+      <ion-img src="/assets/slidefotos/slide3.jpg"></ion-img>
+    </ion-slide>
+    <ion-slide>
+      <ion-img src="/assets/slidefotos/slide4.jpg"></ion-img>
+    </ion-slide>
+
+  </ion-slides>
+
+
 </ion-content>
