--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,21 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+// Clases agregadas a partir del 2020 mayo 16
+
+
+.fontCarrusel {
+    width: 100%;
+    height: 200px;
+}
+
+.padding_rows {
+    padding: 2px;
+}
+
+.iconoTijeras {
+    width: 50px;
+    padding: 10px;
+}
