--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -9,7 +9,7 @@
 
 
 
-<ion-content [fullscreen]="true">
+<ion-content  padding fullscreen>
   <ion-slides class="fontCarrusel">
     <ion-slide>
       <ion-img src="/assets/slidefotos/slide1.jpg"></ion-img>
@@ -31,18 +31,30 @@
   <ion-grid fixed>
 
 <ion-row>
-      <ion-col size-lg="3" size-md="4" size-sm="6" size-xm="12" *ngFor="let c of [1,1,1,1,1,1,1,1,1,1,1,1]; let i = index">
+      <ion-col 
+            size-lg="3" 
+                size-md="4" 
+                size-sm="6" 
+                size-xm="12"
+       *ngFor="let c of Servicios; let i = index">
           
           <ion-card>
-              <ion-img src="/assets/shapes.svg"></ion-img>
+              <!-- <ion-img src="/assets/shapes.svg"></ion-img> -->
           <ion-card-header>
-              <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-              <ion-card-title>
-              Car Title</ion-card-title>
-              <ion-card-content>
-                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 
-              </ion-card-content>
-          </ion-card-header>    
+              <ion-card-subtitle>{{c.title}}</ion-card-subtitle>
+              
+            </ion-card-header>    
+                <ion-card-content>
+                  <!-- <p>
+                    {{c.title}}
+                  </p> -->
+                  <p>
+                    {{c.tiempo}}
+                  </p>
+                  <p>
+                    {{c.costo}}
+                  </p>
+                </ion-card-content>
           </ion-card>
 
       </ion-col>
