--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,18 +1,26 @@
-<ion-tabs>
+<ion-tabs color="dark">
 
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar color="dark" slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
+      <!-- <ion-icon name="peaple"></ion-icon> -->
+      <ion-icon name="person-outline"></ion-icon>
       <ion-label>Tab 1</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
+      <!-- <ion-icon name="ellipse"></ion-icon> -->
+      <ion-icon name="receipt-outline"></ion-icon>
       <ion-label>Tab 2</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
+      <!-- <ion-icon name="square"></ion-icon> -->
+
+      <ion-avatar>
+        <img src="../../assets/slidefotos/slide2.jpg">
+      </ion-avatar>
+
+      
       <ion-label>Tab 3</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
