--- a/src/global.scss
+++ b/src/global.scss
@@ -42,3 +42,78 @@
     width: 50px;
     padding: 10px;
 }
+
+
+
+
+
+/*=============================================*/
+
+// estilos propios
+
+.text-primary {
+    color: var( --ion-color-primary) !important;
+}
+
+.noticia-source-name {
+  font-size: 12px;
+  color: lightgray;
+}
+
+
+.action-dark {
+    background-color: var( --ion-color-dark ) !important;
+    color: white !important;
+
+}
+
+.action-dark ion-icon {
+    color: white !important;
+}
+
+.tab-selected {
+        color: var( --ion-color-primary) !important;
+}
+
+
+// animaciones
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+
+.animated.faster {
+  -webkit-animation-duration: 700ms;
+  animation-duration: 700ms;
+}
+
+
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+}
+
