--- a/src/global.scss
+++ b/src/global.scss
@@ -117,3 +117,19 @@
   animation-name: fadeIn;
 }
 
+.ion-color-dark2 {
+    --ion-color-base: var(--ion-color-new);
+    --ion-color-base-rgb: var(--ion-color-new-rgb);
+    --ion-color-contrast: var(--ion-color-new-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-new-contrast-rgb);
+    --ion-color-shade: var(--ion-color-new-shade);
+    --ion-color-tint: var(--ion-color-new-tint);
+  }
+
+
+//   size-lg="3" 
+//   size-md="4" 
+//   size-sm="6" 
+//   size-xm="12"
+
+// size="12" size-lg="3" size-md="4" size-sm="6" size-xs="12"
